FlightPath 4.x Changelog
========================

2012-07-10
  Moved user functions into its own module, user, and enabled on install by default.
  Also fixed a few bugs int he user module.
  

2012-07-09
  On install, insert basic permissions for the authenticated user.
  

2012-07-06
  Enabled announcements and update_status modules on FlightPath first install,
  and created a new sample announcement when the announcement module is installed
  the first time.

  Added check to install.php to make sure custom directory was writable, displaying
  error if it is not.
  
  Made it to where tabs don't show up for advisors until they select a student.
  
  Little search in the corner doesn't show up unless you have permission to search.
  
  Fixed bug where "objList" was being required instead of "ObjList".  It caused a fatal
  error on Linux, but not on Windows, interestingly enough.  Difference in PHP versions?
  
 
2012-07-05
  Started update_status module.
  

2012-06-30
  Finalized COPYRIGHT.txt file, and removed old copyright notices from individual source files.
  
  Added token check to advising submissions, as well as hook so users can hook in when it is submitted.
  
  Removed old files from the repository.
  
  index.php checks to see that FlightPath is installed, if not, it redirects to install script


2012-06-27
  Completed the install script for the most part, as well as made various changes in other
  files in the pursuit of making the install script work.


2012-06-26
  Working on creating an install script for FlightPath; moving database creation statements
  into system.install file, under the system module.


2012-06-10
  Finished the stats module for now.  It could use some more reports, but is OK for now.
  
  Got mobile version back to working state.


2012-06-09
  Beginning work on the stats module.
  
  Changed comment form to be proper FlightPath form, with form api.
  

2012-06-08