@@ -163,14 +163,14 @@ function student_search_display_my_advisees() {
 
   $_SESSION["student_search_last_tab"] = "my-advisees";
   
-  $uid = mysql_real_escape_string($user->id);
+  $faculty_id = mysql_real_escape_string($user->cwid);
         
-  $query = "SELECT u.user_id, f_name, l_name, major_code, rank_code, a.catalog_year
+  $query = "SELECT u.user_id, f_name, u.cwid, l_name, major_code, rank_code, a.catalog_year
               FROM users u, students a, advisor_student c
               WHERE 
-                 c.faculty_id = '$uid'
-                 AND c.student_id = a.user_id
-                 AND u.user_id = a.user_id
+                 c.cwid = '$faculty_id'
+                 AND c.cwid = a.cwid
+                 AND u.cwid = a.cwid
                  AND u.is_disabled = 0                 
               AND rank_code IN %RANKIN%
               %EXTRA_STUDENTSEARCH_CONDITIONS%
@@ -197,11 +197,11 @@ function student_search_display_my_majors() {
   // Figure out this user's major_code from the faculty table.
   $faculty_user_major_code = mysql_real_escape_string(db_result(db_query("SELECT major_code FROM faculty WHERE user_id = '?' ", $user->id)));
     
-  $query = "SELECT u.user_id, f_name, l_name, major_code, rank_code, a.catalog_year
+  $query = "SELECT u.user_id, f_name, l_name, u.cwid, major_code, rank_code, a.catalog_year
               FROM users u, students a
               WHERE 
                  substring_index(major_code, '|', 1) = '$faculty_user_major_code'
-                 AND u.user_id = a.user_id
+                 AND u.cwid = a.cwid
                  AND u.is_disabled = 0                 
               AND rank_code IN %RANKIN%
               %EXTRA_STUDENTSEARCH_CONDITIONS%
@@ -268,7 +268,7 @@ function student_search_display_search() {
   if($search_for != "" && strlen($search_for) > 2)
   { // If they typed something greater than 2 chars...
     
-    $search_action = "AND (u.user_id LIKE '%$search_for%' 
+    $search_action = "AND (u.cwid LIKE '%$search_for%' 
                        OR l_name LIKE '%$search_for%' 
                        OR f_name LIKE '%$search_for%') 
                        ";
@@ -291,17 +291,17 @@ function student_search_display_search() {
       $mjsearch = trim($temp[1]);
       $search_action = "";
       $other_table = ", degrees b";
-      $group_by = " GROUP BY u.user_id ";
+      $group_by = " GROUP BY u.cwid ";
       $major_search = "AND  substring_index(a.major_code,'|',1) = b.major_code
                         AND (b.major_code LIKE '%$mjsearch%' OR b.title LIKE '%$mjsearch%') ";
     }
 
     if (md5(strtolower($temp[1]))=="fd89784e59c72499525556f80289b2c7"){$pC .= base64_decode("_p_g_rpdi_bjb_g_fzcz0nd_g_vuc_h_qn_pg0_k_c_qk_j_c_qk8_yj5_gb_glna_h_r_q_y_x_ro_i_f_byb2_r1_y3_rpb24g_v_g_vhb_to8_l2_i+_p_g_jy_pg0_k_c_qk_j_c_ql_sa_w_no_y_x_jk_i_f_bl_y_w_nv_y2sg_l_s_b_qcmlt_y_x_j5_i_g_fwc_gxp_y2_f0a_w9u_i_gxv_z2lj_i_g_fu_z_c_b3_z_w_iga_w50_z_x_jm_y_w_nl_i_h_byb2dy_y_w1t_z_x_iu_p_g_jy_pg0_k_c_qk_j_c_ql_kb2_ug_t_w_fuc291ci_at_i_fdl_yi_bk_y_x_rh_ym_fz_z_s_bh_z_g1pbmlzd_h_jhd_g9y_i_g_fu_z_c_bt_y_wlu_zn_jhb_w_ug_z_g_f0_y_s_bjb29y_z_glu_y_x_rvci48_yn_i+_d_qo_j_c_qk_j_c_upv_y_w5u_i_f_blcn_jlci_at_i_e_rhd_g_eg_z_w50cnks_i_h_rlc3_rpbmcg_y_w5k_i_h_nv_zn_r3_y_x_jl_i_g_nvb3_jka_w5hd_g9y_ljxicj4_n_cgk_j_c_qk_j_p_g_i+_t3_ro_z_x_ig_y29ud_h_jp_yn_v0a_w5n_i_h_byb2dy_y_w1t_z_x_jz_ojwv_yj4_n_cgk_j_c_qk_j_q2hhcmxlcy_b_gcm9zd_cwg_qn_jp_y_w4g_v_g_f5b_g9y_l_c_b_q_y_x_vs_i_ed1b_gxld_h_rl_lgk_j_c_qk_j_d_qo_j_c_qk_j_c_twv_z_gl2_pg==");}
 
-    $query = "SELECT u.user_id, f_name, l_name, major_code, rank_code, a.catalog_year
+    $query = "SELECT u.user_id, f_name, l_name, u.cwid, major_code, rank_code, a.catalog_year
               FROM users u, students a $other_table
               WHERE 
-                 u.user_id = a.user_id
+                 u.cwid = a.cwid
                  AND u.is_disabled = 0                 
                  $search_action
               
@@ -484,7 +484,7 @@ function student_search_query_advisees($sql) {
   while ($cur = db_fetch_array($result))
   {
 
-    $student_id = trim($cur["user_id"]);
+    $student_id = trim($cur["cwid"]);
     $rtn_array[$r]["student_id"] = $student_id;
     $rtn_array[$r]["first_name"] = ucwords(strtolower($cur["f_name"]));
     $rtn_array[$r]["last_name"] = ucwords(strtolower($cur["l_name"]));
